ai basica funcionando a la velocidad de la luz :v